

2003-01-14 v0.01 Tels - 4 tests
 * First version (basically working)

Please send me test-reports, your experiences with this and your ideas - I love
to hear about my work!

Tels <http://bloodgate.com/>