@@ -14,26 +14,26 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 
 SHA1 8b1bcb072be0316a028b0c1b3e3f45c9f8b51952 BUGS
-SHA1 9684b65e2e6dbfcb4c93ba0f3546bcb257385cb1 CHANGES
+SHA1 4ea6cd22218bb7bd3d2d02203d0d4dbbafece52c CHANGES
 SHA1 7c6a81fc00592f26354ffc7844b6ff674137c3de CREDITS
-SHA1 e779295d75ce92040a22da5fccccd54c0884df3d INSTALL
+SHA1 1a6b70f79647737e56d373644ec946ec2cd04fe4 INSTALL
 SHA1 d6a6c30ee6d9ba6b9afab8bbf6a25e1b23c744e0 LICENSE
 SHA1 889de84e8e314b59562eb3356e8b2d2abd268b83 MANIFEST
 SHA1 7aad3c7d6ad16e2c510fecb9df1c5a665ebb72a8 Makefile.PL
-SHA1 d59665436b209c4c3e45b09bd0d7dd3acc089874 Mandelbrot.xs
-SHA1 cbb9a10ad511a686011b146c77262dcc75a71ebc README
-SHA1 488fef5af076feedfecc1e7193571c10feab2c4f TODO
-SHA1 563e7a1a287c58d0e808071a378edce5b6e25c01 lib/Math/Fractal/Mandelbrot.pm
-SHA1 9b32088d7b199304dcc71d25659aa6671197432a t/mandel.t
+SHA1 959299c118b73b5a7f76d1e6a136321b4010ab5c Mandelbrot.xs
+SHA1 1752616a3f0bbc163ea55fdfec237dcb6442c75d README
+SHA1 8cfc1d0c0a08dcc97c2193a49ee696f62de1ef98 TODO
+SHA1 ad92e3a943680a3b85cff83aa0d3855a8537fbcc lib/Math/Fractal/Mandelbrot.pm
+SHA1 bc03d108abd569285562b4fa1f83461dade7a957 t/mandel.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.0.6 (GNU/Linux)
 Comment: When cryptography is outlawed, bayl bhgynjf jvyy unir cevinpl.
 
-iQEVAwUBPiM6tncLPEOTuEwVAQHhGAf/U61h89WsaVzKLw/ZlhobudV9dz35utjD
-u7wl8LB8CmNLoNfE3W7uAwBt3uWVJMVOO+uy1HYmSKd0EVnMIa45W7S6Fqjd/Kau
-u4b5h+Dsiw7kycx1gfjZD4hURD0EauQriHBh8aN/cirC2SLFUjWqxqsqBafP2gAh
-cyGlEFTW5TZI70U4lBvpfo6mvxd5FkaMR5iJ4ERYl9dqLSjenQn3BALaBtajbFDx
-OEeaC5kxF+KbCnmKZPijKDBjcYMIs78FRhT4XbNdro0zp4ToOVsaP7tQfr0n2AWb
-HrudqX1zNm/wfB9Fzokkjy9VNMlLTBtfZL61hLPv6r22oVejJ8Q7Zw==
-=1pfV
+iQEVAwUBPirOTXcLPEOTuEwVAQGl+Qf+PkbIMDGaygS0U5sqbva/ve1OH15NZpDw
+ltws+mb0dEsbjFNq45a9tLfRGG/3B02npaWMMxaOoOKpQe55eKRGUyRSPR7mlOqt
+XAUpqOZL2cZJ6dWlhnaXRISv1xpbJc7vTlNGkuA/l0/P6QfE3dKhgp7eWGoo29kY
+soOSFxnROPe+BkmnnVMoAX0yxYTHWb2i70R2K2BIESJT5Oz7bKV4ZRctvabR4bKd
+ZiO5vSy9ixbi+Omi+yEytKj47vm8mhQF98t334mjAgdeABEryGx8Rpb7GWvhgVTR
+Ncnarfcqd9Am3hTqdIK3efACUo8LcnQyOfatmWVvtsOWHOi7QH/23g==
+=Qc6l
 -----END PGP SIGNATURE-----
