@@ -1,7 +1,8 @@
 
-* hor/ver stripes, areas
-* method that gets width/height and x1,y1, x2,y2 and calc. x,y from that
 * arbitrary precision for deep-zooming
+* OO: create a new object, set the values, get them and the do the calc. Right
+  now all parameters are stored global (well, it is easier and faster and who
+  needs alternating between two different sets?)
 
 Please send me test-reports, your experiences with this and your ideas - I love
 to hear about my work!
