@@ -2,6 +2,12 @@
 
 2003-01-14 v0.01 Tels - 4 tests
  * First version (basically working)
+2003-01-18 v0.02 Tels - 12 tests
+ * Changed: point() now only gets $x and $y, please change your code!
+ * added: set_limit(), set_epsilon(), set_bounds(), set_max_iter()
+   (a set epsilon is currently ignored)
+ * added: hor_line(), ver_line()
+ * fixed INSTALL
 
 Please send me test-reports, your experiences with this and your ideas - I love
 to hear about my work!
